--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="nav">
     <h2><a href="index.html">WellNest </a></h2>
     <div class="navp">
-      <h4><a href="hospitals.html">Hospitals</a></h4>
-      <h4><a href="explore.html">About Us</a></h4>
+      <h4><a >Video Consult</a></h4>
+      <h4><a >Book Appointment</a></h4>
       <h4><a href="terms.html"> Privacy</a> </h4>
-      <h4><a href="feedback.html">Feedback</a></h4>
+      <h4><a href="feed.html">Feedback</a></h4>
       <i class="ri-menu-line"></i>
     </div>
   </div>
@@ -100,13 +100,13 @@
 <!--   footer     -->
 <div class="footer">
   <div class="footp1">
-    <a href="index.html">   Back to Top</a>
+    <a href="index.html">  Back to Top</a>
   </div>
 
   <div class="footp2">
     <ul>
       <p>Get to Know Us</p> 
-      <a>About Us</a>
+      <a href="explore.html">About Us</a>
       <a>Careers</a>
       <a>Press Releases</a>
       <a>Technologies</a>
