--- a/chat.html
+++ b/chat.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WellNest</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="landing.css">
+  <link rel="stylesheet" href="stylestyle.css">
+  <link rel="stylesheet" href="style/landing.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
 <!--  header    -->
 <div class="main">
   <div class="nav">
-    <h2><a href="index.html">WellNest </a></h2>
-    <div class="navp">
-      <h4><a >Video Consult</a></h4>
-      <h4><a >Book Appointment</a></h4>
-      <h4><a href="terms.html"> Privacy</a> </h4>
-      <h4><a href="feedback.html">Feedback</a></h4>
-      <i class="ri-menu-line"></i>
-    </div>
+      <h2><a href="index.html">WellNest </a></h2>
+      <div class="navp">
+          <h4><a href="connect.html">Connect with doctor</a></h4>
+          <h4><a href="appointment.html">Book Appointment</a></h4>
+          <h4><a href="terms.html"> Privacy</a> </h4>
+          <h4><a href="feedback.html">Feedback</a></h4>
+          <i class="ri-menu-line"></i>
+      </div>
   </div>
+
+
 
 <!-- content    -->
     <div class="content">
