--- a/feedback.html
+++ b/feedback.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Feedback Form</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles2.css">
+    <title>Feedback Form</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/feedback.css">
     
 </head>
 <body>
@@ -14,7 +14,7 @@
             <h2><a href="index.html">WellNest </a></h2>
             <div class="navp">
                 <h4><a href="Connect with doctor.html">Connect with doctor</a></h4>
-                <h4><a href="mini.html">Book Appointment</a></h4>
+                <h4><a href="appointment.html">Book Appointment</a></h4>
                 <h4><a href="terms.html"> Privacy</a> </h4>
                 <h4><a href="feedback.html">Feedback</a></h4>
                 <i class="ri-menu-line"></i>
@@ -23,8 +23,8 @@
         <div class="toflex">
           <div class="flexbox">
             <div class="form-container">
-              <h2>Hospital Feedback Form</h2>
-              <form action="#" method="post">
+              <h2>Feedback</h2>
+              <form action="thank.html" method="get" class="feedback-thank">
                   <div class="form-group">
                       <label for="name">Full Name:</label>
                       <input type="text" id="name" name="name" required>
@@ -56,7 +56,7 @@
                   </div>
   
                   <div class="form-group">
-                      <label for="recommend">Would you recommend our hospital?</label>
+                      <label for="recommend">Would you recommend WellNest to other people?</label>
                       <div class="radio-group">
                           <label for="yes">Yes</label>
                           <input type="radio" id="yes" name="recommend" value="yes" required>
@@ -79,7 +79,7 @@
 
     <div class="footer">
         <div class="footp1">
-            <a href="index.html">   Back to Top</a>
+            <a href="feedback.html">   Back to Top</a>
         </div>
       
         <div class="footp2">
@@ -133,5 +133,6 @@
             </div>
         </div>
     </div>
+    <script src="//code.tidio.co/izzd7fn9kjcgckspamdj4fejhbyfspzz.js" async></script>
 </body>
 </html>
