--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>WellNest</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="landing.css">
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/landing.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
 </head>
 
@@ -13,17 +13,18 @@
 <!--  header    -->
 <div class="main">
   <div class="nav">
-    <h2><a href="index.html">WellNest </a></h2>
-    <div class="navp">
-      <h4><a >Video Consult</a></h4>
-      <h4><a >Book Appointment</a></h4>
-      <h4><a href="terms.html"> Privacy</a> </h4>
-      <h4><a href="feed.html">Feedback</a></h4>
-      <i class="ri-menu-line"></i>
-    </div>
+      <h2><a href="index.html">WellNest </a></h2>
+      <div class="navp">
+          <h4><a href="../connect.html">Connect with doctor</a></h4>
+          <h4><a href="../appointment.html">Book Appointment</a></h4>
+          <h4><a href="../terms.html"> Privacy</a> </h4>
+          <h4><a href="../feedback.html">Feedback</a></h4>
+          <i class="ri-menu-line"></i>
+      </div>
   </div>
+</div> 
 
-<!-- content    -->
+  <!-- content    -->
     <div class="content">
       <div class="left">
         <h1>For all your <span>needs</span><br> we are here with you.</h1>
@@ -33,80 +34,80 @@
         <button class="btn"><a href="explore.html">Know More</a></button>
       </div>
       <div class="right">
-        <img class="logo" src="logo.jpg">
+        <img class="logo" src="../images/logo.jpg">
       </div>
     </div>
-  </div>
+</div>
 
 <!-- department-grid   -->
   <div class="department">
     <div class="box1 box">
         <div class="box-content">
             <h2>Eye Care</h2>
-        <div class="box-image" style="background-image: url('images/eye.jpg');"></div> 
+        <div class="box-image" style="background-image: url('../images/eye.jpg');"></div> 
         </div>
         
      </div>
     <div class="box2 box">
         <div class="box-content">
             <h2>Cardiology</h2>
-          <div class="box-image" style="background-image: url('images/cardio.jpg');"></div>
+          <div class="box-image" style="background-image: url('../images/cardio.jpg');"></div>
         </div>
     </div>
     <div class="box3 box">
         <div class="box-content">
             <h2>Dental Care</h2>
-            <div class="box-image" style="background-image: url('images/dental.png');"></div>
+            <div class="box-image" style="background-image: url('../images/dental.png');"></div>
         </div>
     </div>
     <div class="box4 box">
         <div class="box-content">
             <h2>Gastroenterology</h2>
-            <div class="box-image" style="background-image: url('images/gas.jpg');"></div>
+            <div class="box-image" style="background-image: url('../images/gas.jpg');"></div>
         </div>
     </div>
     <div class="box5 box">
         <div class="box-content">
             <h2>Nephrology</h2>
-            <div class="box-image" style="background-image: url('images/nephro.jpg');"></div>
+            <div class="box-image" style="background-image: url('../images/nephro.jpg');"></div>
         </div>
         
      </div>
     <div class="box6 box">
         <div class="box-content">
             <h2>Dermatology</h2>
-            <div class="box-image" style="background-image: url('images/derma.jpg');"></div>   
+            <div class="box-image" style="background-image: url('../images/derma.jpg');"></div>   
         </div>
     </div>
     <div class="box7 box">
         <div class="box-content">
             <h2>Gynecology</h2>
-            <div class="box-image" style="background-image: url('images/gynecologist.jpg');"></div>
+            <div class="box-image" style="background-image: url('../images/gynecologist.jpg');"></div>
         </div>
     </div>
     <div class="box8 box">
         <div class="box-content">
             <h2>Orthopedics</h2>
-            <div class="box-image" style="background-image: url('images/physiotherapy.jpg');"></div>
+            <div class="box-image" style="background-image: url('../images/physiotherapy.jpg');"></div>
         </div>
     </div>
     <div class="box9 box">
       <div class="box-content">
           <h2>Neurology</h2>
-      <div class="box-image" style="background-image: url('images/neurology.jpg');"></div>   
+      <div class="box-image" style="background-image: url('../images/neurology.jpg');"></div>   
       </div>
 </div>
 </div>
 <!--   footer     -->
 <div class="footer">
   <div class="footp1">
-    <a href="index.html">  Back to Top</a>
+    <a href="../index.html">  Back to Top</a>
   </div>
 
   <div class="footp2">
     <ul>
       <p>Get to Know Us</p> 
-      <a href="explore.html">About Us</a>
+      <a href="../explore.html">About Us</a>
       <a>Careers</a>
       <a>Press Releases</a>
       <a>Technologies</a>
