--- a/terms.html
+++ b/terms.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>WellNest</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="terms.css">
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/terms.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
 </head>
 <body>
 <!--  header    -->
 <div class="main">
   <div class="nav">
-    <h2><a href="index.html">WellNest </a></h2>
-    <div class="navp">
-      <h4><a >Video Consult</a></h4>
-      <h4><a >Book Appointment</a></h4>
-      <h4><a href="terms.html"> Privacy</a> </h4>
-      <h4><a href="feedback.html">Feedback</a></h4>
-      <i class="ri-menu-line"></i>
-    </div>
+      <h2><a href="index.html">WellNest </a></h2>
+      <div class="navp">
+          <h4><a href="connect.html">Connect with doctor</a></h4>
+          <h4><a href="appointment.html">Book Appointment</a></h4>
+          <h4><a href="terms.html"> Privacy</a> </h4>
+          <h4><a href="feedback.html">Feedback</a></h4>
+          <i class="ri-menu-line"></i>
+      </div>
   </div>
 
 <div class="privacy">
@@ -54,6 +54,9 @@
 </div>
 <!--   footer     -->
 <div class="footer">
+  <div class="footp1">
+    <a href="terms.html">  Back to Top</a>
+  </div>
 
   <div class="footp2">
     <ul>
@@ -90,10 +93,10 @@
   </div>
  
   <div class="footp3">
-    <p>The content provided here and elsewhere on the WellNest site is provided for general informational purposes only.It is not intended
+    <span>The content provided here and elsewhere on the WellNest site is provided for general informational purposes only.It is not intended
       as, WellNest does not provide medical advice,diagnosis or treatment.Always contact your healthcare provider directly with any questions
       you may have regarding your health or specific medical advice.
-    </p>
+    </spanp>
   </div>
 
   <div class="footp4">
@@ -106,10 +109,7 @@
       <a>Terms</a>
     </div>
   </div>
-  
- 
 </div>
- 
-
+<script src="//code.tidio.co/izzd7fn9kjcgckspamdj4fejhbyfspzz.js" async></script>
 </body>
 </html>
