--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
         <div class="nav">
             <h2><a href="index.html">WellNest </a></h2>
             <div class="navp">
-                <h4><a href="Connect with doctor.html">Connect with doctor</a></h4>
+                <h4><a href="connect.html">Connect with doctor</a></h4>
                 <h4><a href="appointment.html">Book Appointment</a></h4>
                 <h4><a href="terms.html"> Privacy</a> </h4>
                 <h4><a href="feedback.html">Feedback</a></h4>
