--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="navp">
           <h4><a href="../connect.html">Connect with doctor</a></h4>
           <h4><a href="../appointment.html">Book Appointment</a></h4>
+          <h4><a href="../telemedicine.html">Order Medicines</a></h4>
           <h4><a href="../terms.html"> Privacy</a> </h4>
-          <h4><a href="../feedback.html">Feedback</a></h4>
           <i class="ri-menu-line"></i>
       </div>
   </div>
@@ -43,15 +43,19 @@
   <div class="department">
     <div class="box1 box">
         <div class="box-content">
-            <h2>Eye Care</h2>
-        <div class="box-image" style="background-image: url('../images/eye.jpg');"></div> 
+            <a href="eye.html"><h2>Eye Care</h2>
+              <div class="box-image" style="background-image: url('../images/eye.jpg');"></div> 
+            </a>
+        
         </div>
         
      </div>
     <div class="box2 box">
         <div class="box-content">
+          <a href="cardio.html">  
             <h2>Cardiology</h2>
           <div class="box-image" style="background-image: url('../images/cardio.jpg');"></div>
+          </a>
         </div>
     </div>
     <div class="box3 box">
@@ -81,9 +85,11 @@
     </div>
     <div class="box7 box">
         <div class="box-content">
+            <a href="gyanec.html">
             <h2>Gynecology</h2>
             <div class="box-image" style="background-image: url('../images/gynecologist.jpg');"></div>
-        </div>
+            </a>
+          </div>
     </div>
     <div class="box8 box">
         <div class="box-content">
@@ -128,9 +134,10 @@
     </ul>
     <ul>
       <p>Do you have any recommendation?</p> 
+      <a href="feedback.html">Feedback</a>
       <a>List a Hospital</a>
       <a>Become our EHR partner</a>
-      <a>Feedback</a>
+   
       <a>Contribute</a>
       <a>Donations</a>
       <a>Learn More about WellNest</a>
