--- a/terms.html
+++ b/terms.html
@@ -16,8 +16,8 @@
       <div class="navp">
           <h4><a href="connect.html">Connect with doctor</a></h4>
           <h4><a href="appointment.html">Book Appointment</a></h4>
+          <h4><a href="../telemedicine.html">Order Medicines</a></h4>
           <h4><a href="terms.html"> Privacy</a> </h4>
-          <h4><a href="feedback.html">Feedback</a></h4>
           <i class="ri-menu-line"></i>
       </div>
   </div>
