--- a/eye.html
+++ b/eye.html
@@ -37,9 +37,9 @@
         </div>
      <!--hospital 2-->
      <div class="Hospital-card">
-        <img src="./images/aiims.jpg" alt="Hospital 2">
+      <a href="aiims.html"><img src="./images/aiims.jpg" alt="Hospital 1"></a>
           <div class="Hospital-info">
-            <h2>AIIMS Hospital</h2>
+            <a href="aiims.html"><h2>AIIMS Hospital</h2></a>
             <p class="rating">Rating:⭐⭐⭐⭐</p>
             <p class="insurance">Insurance covered:✅</p>
             <p class="specialty">Speciality:Providing top-tier retina and corneal surgeries with state-of-the-art technology.</p>
