--- a/cardio.html
+++ b/cardio.html
@@ -40,9 +40,10 @@
         </div>
      <!--hospital 2-->
      <div class="Hospital-card">
-        <img src="./images/aiims.jpg" alt="Hospital 2">
+      
+          <a href="aiims.html"><img src="./images/aiims.jpg" alt="Hospital 2"></a>
           <div class="Hospital-info">
-            <h2>AIIMS Hospital</h2>
+            <a href="aiims.html"><h2>AIIMS</h2></a>
             <p class="rating">Rating:⭐⭐⭐⭐</p>
             <p class="insurance">Insurance covered:✅</p>
             <p class="specialty">Speciality:Based in Delhi ,AIIMS is consistently ranked as the #1 heart hospital in the Delhi due to its cutting-edge cardiovascular care.</p>
