--- a/aiims.html
+++ b/aiims.html
@@ -15,10 +15,10 @@
   <div class="nav">
     <h2><a href="index.html">WellNest </a></h2>
     <div class="navp">
-      <h4><a href="hospitals.html">Hospitals</a></h4>
-      <h4><a href="explore.html">About Us</a></h4>
-      <h4><a href="terms.html"> Privacy</a> </h4>
-      <h4><a href="feedback.html">Feedback</a></h4>
+      <h4><a href="connect.html">Connect with doctor</a></h4>
+              <h4><a href="appointment.html">Book Appointment</a></h4>
+              <h4><a href="../telemedicine.html">Order Medicines</a></h4>
+              <h4><a href="terms.html"> Privacy</a> </h4>
       <i class="ri-menu-line"></i>
     </div>
 </div> 
